[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em05"
version = "0.1.0"
description = "Python library for Quectel EM05 cellular module SMS operations"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Rikki", email = "i@rikki.moe"}
]
keywords = ["sms", "cellular", "quectel", "em05", "at-commands"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Telephony",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyserial>=3.4",
]

[project.urls]
Homepage = "https://github.com/rikki/em05-sms"
"Bug Reports" = "https://github.com/rikki/em05-sms/issues"
Source = "https://github.com/rikki/em05-sms"

[tool.setuptools.packages.find]
where = ["."]
include = ["em05*"]